--- a/readme
+++ b/readme
@@ -1,16 +1,1 @@
-Exercise1
-
-Exercise2
-
-
-    Apply the Belief-Desire-Intention (BDI) concept to solve a single-vehicle routing problem in a dynamic environment. 
-
-    You create a graph environment, similar to what we have done in the first exercise session, with one AGV. The task of the AGV is to move from an original node to a destination node. While the AGV is operating, you dynamically remove and add connections to the graph.
-    You are expected to spend the first 30 minutes on thinking about a BDI-solution for the problem and discuss it with the teaching assistant, and then spend the next one hour on implementing your BDI-solution in RinSim.
-
-    Create a Gradient Field or Contract Net protocol implementation for a pickup and delivery problem. For this exercise, only the task allocation problem is relevant, e.g. what vehicle is delivering what package.
-
-    use the PlaneRoadModel as the road (as used in SimpleExample) so that vehicle routing becomes simple
-    use the DefaultPDPModel for the pickup and delivery problem (as used in TaxiExample)
-    use the CommModel for communication (as used in CommExample)
-
+Multi-Agent Systems Project
